fix(ZNTA-2063) improved contrast of needs work buttons on user profile page

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -4731,6 +4731,7 @@ h2.recent-contrib {
 
 #activity-table td button.btn-warning {
   background-color: rgba(233, 221, 0, 0.65);
+  color: @color-dark;
 }
 
 #activity-table td button.btn-info {
@@ -4777,7 +4778,7 @@ button.success.btn.btn-default.active {
 button.unsure.btn.btn-default:focus, button.unsure.btn.btn-default:hover,
 button.unsure.btn.btn-default.active {
   background-color: rgba(233, 221, 0, 1);
-  color: #fff;
+  color: @color-dark;
   text-decoration: none;
   outline: 0;
   box-shadow: none;
@@ -4789,6 +4790,7 @@ button.unsure.btn.btn-default.active {
 
 #activity-table td button.active.btn.btn-warning {
   background-color: rgba(233, 221, 0, 1);
+  color: @color-dark;
 }
 
 #activity-table td button.active.btn.btn-info {
@@ -4807,6 +4809,7 @@ button.unsure.btn.btn-default.active {
 
 #activity-table td button.btn-warning:focus {
   background-color: rgba(233, 221, 0, 0.95);
+  color: @color-dark;
 }
 
 #activity-table td button.btn-primary:focus {
